# Baiscope

./: README.md  db.py  main.py  pyproject.toml  test_player.py  test_servers.py
cache/: __init__.py  image_cache.py
scrapers/: __init__.py  base.py  drama_scraper.py  dramacool.py  freeonlinedrama_scraper.py  gogoanime.py  gogoanime_ba_scraper.py  leet_scraper.py  lucifer_donghua_scraper.py  movie2k_scraper.py  movie_scraper.py  solarmovie_scraper.py  stream_extractor.py  torrent_streamer.py  vidsrc_anime.py  xmovies_scraper.py  yts.py
ui/: browse_page.py  catalog_page.py  detail_page.py  favorites_page.py  main_window.py  player_page.py  search_page.py  settings_page.py  site_catalog_page.py
ui/widgets/: __init__.py  card.py  nav_bar.py
workers/: __init__.py  detail_worker.py  image_worker.py  search_worker.py  stream_worker.py
