[project]
name = "baiscope"
version = "0.1.0"
description = "Desktop media streaming app aggregating anime, movies, and dramas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pyside6>=6.10.2",
    "python-vlc>=3.0.21203",
    "requests>=2.32.5",
    "yt-dlp>=2024.12.23",
]

[tool.setuptools.packages.find]
include = ["scrapers*", "ui*", "workers*", "cache*", "db*"]

[project.scripts]
baiscope = "main:main"
